--- a/INSTALL
+++ b/INSTALL
@@ -1,14 +1,15 @@
 
+Copyright (C) 2011 Institute for System Programming, RAS
 Copyright (C) 2011 Russian Linux Verification Center
-Copyright (C) 2011-2012 ROSA Laboratory
+Copyright (C) 2011-2012 ROSA Lab
 All rights reserved.
 
 
 RELEASE INFORMATION
 
 Project:           Java API Compliance Checker (Java ACC)
-Version:           1.1.2
-Date:              2012-06-08
+Version:           1.2
+Date:              2012-09-22
 
 
 This INSTALL.txt file explains how to install and setup environment
@@ -28,15 +29,15 @@ Content:
 ===============================================
 
    1. JDK (javap, javac)
-   2. Perl (5.8 or newer)
+   2. Perl 5 (5.8 or newer)
 
 
 
 2. REQUIREMENTS FOR MS WINDOWS
 ==============================
 
-   1. Java Development Kit (javap, javac)
-   2. Active Perl (5.8 or newer)
+   1. JDK (javap, javac)
+   2. Active Perl 5 (5.8 or newer)
 
 
 
