Java API Compliance Checker 1.2.1

--- a/INSTALL
+++ b/INSTALL
@@ -8,11 +8,11 @@ All rights reserved.
 RELEASE INFORMATION
 
 Project:           Java API Compliance Checker (Java ACC)
-Version:           1.2
-Date:              2012-09-22
+Version:           1.2.1
+Date:              2012-10-09
 
 
-This INSTALL.txt file explains how to install and setup environment
+This file explains how to install and setup environment
 for Java ACC tool in your computer.
 
 
