--- a/README
+++ b/README
@@ -1,8 +1,12 @@
 NAME:
   Java API Compliance Checker (Java ACC) - a tool for checking backward binary and source-level compatibility of a Java library API.
+  
+  The tool checks classes declarations of old and new versions and analyzes changes that may break compatibility: removed methods, removed class fields, added abstract methods, etc. The tool is intended for developers of software libraries and Linux maintainers who are interested in ensuring backward compatibility.
+  
+  The tool is developed by Andrey Ponomarenko: http://abi-laboratory.pro/
 
 INSTALL:
-  sudo perl Makefile.pl -install --prefix=/usr
+  sudo make install prefix=/usr
 
 REQUIRES:
   JDK
