--- a/INSTALL
+++ b/INSTALL
@@ -9,7 +9,7 @@ RELEASE INFORMATION
 
 Project:           Java API Compliance Checker (Java ACC)
 Version:           1.4.3
-Date:              2015-09-18
+Date:              2015-11-20
 
 
 This file explains how to install and setup environment
@@ -28,7 +28,7 @@ Content:
 1. REQUIREMENTS FOR LINUX, FREEBSD and MAC OS X
 ===============================================
 
-   1. JDK <= 1.8 (javap, javac) - development files
+   1. JDK - development files (javap, javac)
    2. Perl 5 (5.8 or newer)
 
 
@@ -36,7 +36,7 @@ Content:
 2. REQUIREMENTS FOR MS WINDOWS
 ==============================
 
-   1. JDK <= 1.8 (javap, javac)
+   1. JDK (javap, javac)
    2. Active Perl 5 (5.8 or newer)
 
 
