Fixed detection of methods moved up class hierarchy to java.lang.Object. Added -skip-annotations-list option to skip checking of some annotated classes and methods. Show version of used javac compiler instead of the version of java interpreter in the console output. Fixed support for annotations in Java 8. Check annotations of methods. Check for removed classes with public static fields and only private constructor. Check for removed public static fields in classes with only private constructor. Added more unit tests. Show compatibility rate instead of affect rate in the console output.

--- a/README
+++ b/README
@@ -1,5 +1,5 @@
 NAME:
-  Java API Compliance Checker (Java APICC) - a tool for checking backward binary and source-level compatibility of a Java library API.
+  Java API Compliance Checker (JAPICC) - a tool for checking backward binary and source-level compatibility of a Java library API.
   
   The tool checks classes declarations of old and new versions and analyzes changes that may break compatibility: removed methods, removed class fields, added abstract methods, etc. The tool is intended for developers of software libraries and Linux maintainers who are interested in ensuring backward compatibility.
   
