--- a/INSTALL
+++ b/INSTALL
@@ -7,7 +7,7 @@ All rights reserved.
 
 RELEASE INFORMATION
 
-Project:           Java API Compliance Checker (Java ACC)
+Project:           Java API Compliance Checker (JAPICC)
 Version:           1.5
 Date:              2016-03-24
 
