Do not count added methods when calculating compatibility rate. Added -skip-internal-types option to skip checking of some data types (classes and interfaces). Added -added-annotations option to apply filters by annotations only to new version of the library. Added -count-methods option to count methods in the API dump. Fixed filtering of checked methods and classes. Show number of checked classes instead of number of all classes in the report summary. Added numbers of checked methods and types to the meta line of the report. Skip checking of auto-generated methods. Fixed -client option. Fixed html formatting in the report. Fixed class-file names in the report.

--- a/INSTALL
+++ b/INSTALL
@@ -8,8 +8,8 @@ All rights reserved.
 RELEASE INFORMATION
 
 Project:           Java API Compliance Checker (JAPICC)
-Version:           1.6
-Date:              2016-04-08
+Version:           1.7
+Date:              2016-04-14
 
 
 This file explains how to install and setup environment
@@ -28,7 +28,7 @@ Content:
 1. REQUIREMENTS FOR LINUX, FREEBSD and MAC OS X
 ===============================================
 
-   1. JDK - development files (javap, javac)
+   1. JDK or OpenJDK - development files (javap, javac)
    2. Perl 5 (5.8 or newer)
 
 
@@ -36,7 +36,7 @@ Content:
 2. REQUIREMENTS FOR MS WINDOWS
 ==============================
 
-   1. JDK (javap, javac)
+   1. JDK or OpenJDK (javap, javac)
    2. Active Perl 5 (5.8 or newer)
 
 
