JAPICC 2.0 Beta. Code refactoring. Improved report style. Works faster on big libraries. Added a module with compatibility rules. Added a module to create API dump from disassembled code. Added a module to handle XML descriptors. Added a module to filter API symbols. Added a module to handle input data. Added a module for logging. Added a module to unmangle symbols. Added a module with regression test suite. Added a module to find system files. Added a module to handle type attributes. Added a module with basic functions.

--- a/INSTALL
+++ b/INSTALL
@@ -1,5 +1,4 @@
 
-Copyright (C) 2011 Institute for System Programming, RAS
 Copyright (C) 2011-2016 Andrey Ponomarenko's ABI Laboratory
 
 All rights reserved.
@@ -8,8 +7,8 @@ All rights reserved.
 RELEASE INFORMATION
 
 Project:           Java API Compliance Checker (JAPICC)
-Version:           1.8
-Date:              2016-07-04
+Version:           2.0 Beta
+Date:              2016-12-08
 
 
 This file explains how to install and setup environment
