--- a/README
+++ b/README
@@ -1,3 +1,6 @@
+JAPICC 2.0 Beta
+===============
+
 NAME:
   Java API Compliance Checker (JAPICC) - a tool for checking backward binary and source-level compatibility of a Java library API.
   
