--- a/INSTALL
+++ b/INSTALL
@@ -7,8 +7,8 @@ All rights reserved.
 RELEASE INFORMATION
 
 Project:           Java API Compliance Checker (JAPICC)
-Version:           2.0 Beta
-Date:              2017-01-19
+Version:           2.0
+Date:              2017-01-28
 
 
 This file explains how to install and setup environment
