--- a/INSTALL
+++ b/INSTALL
@@ -8,7 +8,7 @@ RELEASE INFORMATION
 
 Project:           Java API Compliance Checker (JAPICC)
 Version:           2.2
-Date:              2017-04-17
+Date:              August 30, 2017
 
 
 This file explains how to install and setup environment
